# mlx-mcp-server

./: CHANGELOG.md  LICENSE  POSTMORTEM.md  README.md  plan.html  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yml
docs/: eval-results-report.html  hermes-monetization.html  local-llm-guide.html  model-benchmark.html  task-aware-routing-brainstorm-v2.html  task-aware-routing-brainstorm-v3.html  task-aware-routing-brainstorm.html
docs/superpowers/plans/: 2026-06-17-case2-live-drill.md  2026-06-17-offload-enforcement-hook.md  2026-06-17-tool-loop-offload-phase2.md
docs/superpowers/specs/: 2026-06-17-case2-live-drill-design.md  2026-06-17-offload-enforcement-hook-design.md  2026-06-17-tool-loop-offload-phase2-design.md
src/mlx_mcp_server/: client.py  config.py  gates.py  installer.py  iterate.py  runtime_config.py  server.py
src/mlx_mcp_server/commands/: big-model-done.md  big-model.md  mlx-help.md  switch-model.md
src/mlx_mcp_server/eval/: __init__.py  __main__.py  loader.py  results.py  runner.py
src/mlx_mcp_server/eval/suite/: boilerplate.yaml  codegen.yaml  explain.yaml  extract.yaml  review.yaml  summarize.yaml
src/mlx_mcp_server/hook/: __main__.py  classify.py  drill.py  gate.py  generate.py  logs.py  omlx.py  prefilter.py  restart.py  run.py  turnstate.py
src/mlx_mcp_server/offload/hooks/: offload-reminder.sh  offload-subagent-nudge.sh
src/mlx_mcp_server/offload/skills/offload/: SKILL.md
src/mlx_mcp_server/scripts/: mlx-big-model-close.sh  mlx-big-model-restore.sh
tests/: test_auto_bigger_model.py  test_call_log.py  test_client.py  test_config.py  test_eval_cli.py  test_eval_loader.py  test_eval_results.py  test_eval_runner.py  test_eval_suite.py  test_gates.py  test_hook_classify.py  test_hook_drill.py  test_hook_entrypoint.py  test_hook_gate.py  test_hook_generate.py  test_hook_logs.py  test_hook_nudge.py  test_hook_omlx.py  test_hook_prefilter.py  test_hook_restart.py  test_hook_run.py  test_hook_turnstate.py  test_installer.py  test_iterate.py  test_iterate_tool.py  test_offload_installer.py  test_runtime_config.py  test_server.py  test_server_instructions.py
