[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlx-mcp-server"
version = "0.2.1"
description = "MCP server bridging Claude to local MLX LM (and any OpenAI-compatible backend)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "mlx", "llm", "claude", "ai"]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
mlx-mcp-server = "mlx_mcp_server.server:main"

[project.urls]
Repository = "https://github.com/deresolution20/mlx-mcp-server"

[tool.hatch.build.targets.wheel]
packages = ["src/mlx_mcp_server"]
# hatchling includes all files under the package tree by default,
# so commands/ and scripts/ subdirectories are automatically bundled.

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]
